<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="air_bed_title">蓝牙床垫</string>
    <string name="app_name">AIot</string>
    <string name="blue_airbed_device_filter_name">XPeng-AB0</string>
    <string name="blue_airbed_title">绑定床垫</string>
    <string name="blue_childseat_device_filter_name">IroboSeat</string>
    <string name="blue_childseat_device_filter_name1">Baby Smart Seat</string>
    <string name="blue_childseat_title">绑定座椅</string>
    <string name="blue_fridge_device_filter_name">小鹏车载冰箱</string>
    <string name="blue_fridge_title">冰箱蓝牙绑定</string>
    <string name="blue_switch">蓝牙开关</string>
    <string name="cancel">取消</string>
    <string name="childseat_bind">绑定座椅</string>
    <string name="childseat_ble_close_button">打开</string>
    <string name="childseat_ble_close_sub">蓝牙已关闭</string>
    <string name="childseat_ble_connect_button">解绑</string>
    <string name="childseat_ble_connect_sub">蓝牙已连接</string>
    <string name="childseat_ble_connecting_button">解绑</string>
    <string name="childseat_ble_connecting_sub">蓝牙连接中…</string>
    <string name="childseat_ble_title">型号： 阿波罗 C04060</string>
    <string name="childseat_install_title">儿童座椅已安装成功</string>
    <string name="childseat_support">支持 Globalkids 环球娃娃 阿波罗 C04060 型号座椅</string>
    <string name="childseat_tips">请按照说明书安装儿童座椅，并确保儿童座椅的电源已打开</string>
    <string name="childseat_title">儿童安全座椅</string>
    <string name="childseat_unbundling_dialog_button_cancel">取消</string>
    <string name="childseat_unbundling_dialog_button_ok">确定</string>
    <string name="childseat_unbundling_dialog_msg">解绑后，将无法获知儿童座椅状态，且需重新绑定，确定要解绑吗？</string>
    <string name="childseat_unbundling_dialog_title">解除绑定</string>
    <string name="childseat_uninstall_title">座椅未安装</string>
    <string name="confirm">确认</string>
    <string name="demo">(模拟)</string>
    <string name="fragrance2_density_vui_label">香氛浓度</string>
    <string name="fragrance2_density_vui_more">了解更多</string>
    <string name="fragrance2_greatmaster_barbara_zoebelein_des">香水界奥斯卡奖项得主\n斩获FIFI奖项“最佳年度男性香水奖”、“最佳年度包装设计奖“\n意大利国家名片——THE MERCHANT OF VENICE 品牌香水主理人,\n其作品被珍藏在意大利博物馆</string>
    <string name="fragrance2_greatmaster_barbara_zoebelein_name">Barbara Zoebelein</string>
    <string name="fragrance2_greatmaster_barbara_zoebelein_post">奇华顿集团调香师</string>
    <string name="fragrance2_greatmaster_clementgavarry_des">⾹⽔家族第4代传⼈\n于2005年，调制Prada by Prada⾹⽔，斩获FIFI奖项“奢华⼥性⾹⽔奖”\n于2006年荣获⾹⽔界“闪亮新星⼤奖”</string>
    <string name="fragrance2_greatmaster_clementgavarry_name">Clement Gavarry</string>
    <string name="fragrance2_greatmaster_clementgavarry_post">芬美意集团调⾹⼤师</string>
    <string name="fragrance2_greatmaster_floriangallo_des">被誉为调⾹届新秀\n认为中国是当今世界上最令⼈向往的社会⽂化实验地\n野兽派⾹氛合作伙伴</string>
    <string name="fragrance2_greatmaster_floriangallo_name">Florian Gallo</string>
    <string name="fragrance2_greatmaster_floriangallo_post">芬美意集团调⾹师</string>
    <string name="fragrance2_greatmaster_hamidmeratikashani_des">Valentino⾹⽔Rose系列负责⼈\n“The customers teach me the roadmap of fragrances!”\n“是客户教我如何使⽤⾹⽔的！”</string>
    <string name="fragrance2_greatmaster_hamidmeratikashani_name">Hamid Merati Kashani</string>
    <string name="fragrance2_greatmaster_hamidmeratikashani_post">芬美意集团⾸席调⾹师</string>
    <string name="fragrance2_introduce_base_en">BASE NOTES</string>
    <string name="fragrance2_introduce_base_name">后调</string>
    <string name="fragrance2_introduce_des_01">        ⽔果是快乐和幸福的真正本质。柑橘类清新果⾹是提神愉悦的味道。沉睡⽽慵懒的灵魂感受⼤地的脉动，享受来⾃⼤⾃然深呼吸。整体味道是夏⽇微酸的果⾹加冰茶微透着茶⾹和罗勒清新味，勾勒出⽂艺⼩清新的夏季节奏。</string>
    <string name="fragrance2_introduce_des_02">        极为简单⼲净的味道组合，表现出内敛的芳华，更能显示优雅绅⼠的⼀⾯，如极简时尚⻛格中，那抹画⻰点睛的灰。属于不张扬却有着我⾏故我在的坚持。在味道属性上是偏男性的中性⾹，前调有玫瑰的⼩浪漫，慢慢的感性的⾹根草带着雪松的底蕴，如极地⽩雪覆盖下苍劲的松林淡雅却有着寂静之美。</string>
    <string name="fragrance2_introduce_des_03">        云淡⻛轻的清新⾃然感。轻快的海洋⻛与花⾹调，微透如海⻛吹拂，享受着被阳光捧着脸的幸福感。在前调有淡淡的酸橙⾹⽓，加⼊清新的柠檬草给⼈清爽的层次感，中调开始淡淡的茉莉⾹⽓如微⻛徐来缓缓释出。不甜腻的中性⾹⽓，如⾃由的⻛，伴着不羁的灵魂驰骋在蓝天之下。</string>
    <string name="fragrance2_introduce_des_04">        前调由绿⾊调和柑橘⾛了⼀个快速的过场，紧跟着散发出新鲜的⽟兰⽓息。随后⼤捧的栀⼦花束⾹味瞬间爆发，浓郁的花⾹不久后转为纤薄，最后以⼴藿⾹收尾。</string>
    <string name="fragrance2_introduce_des_05">        初闻是⾟辣，慢慢地变成略带⾟辣的⽊质调，⾹草透着胡椒和⾖蔻的⾟辣。后调檀⾹幽幽飘出，与清新的零陵⾹⾖，⼲燥的⾹根草，温暖的雪松琥珀，四者交织，沉稳中透出丝丝柔和。</string>
    <string name="fragrance2_introduce_des_06">        前调有些许酸涩，微微的⽓泡感。慢慢地茉莉的⽢甜芬芳，与淡淡的⽊质⽓息和⼲净的麝⾹环绕在⼀起，让⼈⼼醉神迷，乐以忘忧。</string>
    <string name="fragrance2_introduce_des_07">        初闻是⾬后⽵叶清冽的味道，混杂着清新的柑橘⾹⽓。接着茶叶⾹⽓袭来，是刚掐下来的新嫩茶尖，苦涩泛酸。后调以麝⾹混合的味道收尾，中和前⾯过于清凉的植物⽓味。</string>
    <string name="fragrance2_introduce_des_08">        干净舒适的氛围，清新鲜橙风情柔和了精致的茉莉香，甜而不腻的前调微带青涩绿感，茉莉清香随橙香飘然而出，将你拉回美好夏日时光，迎接属于今天的快乐与幸福。</string>
    <string name="fragrance2_introduce_des_09">        清甜果香中隐约透出木质香调，雪松干爽的木香，带上广藿香的幽暗，展现出连绵的暖和氛围。前调干练而不黏腻，沉稳的中调若有若无，殷实而不沉郁的氛围让人心旷神怡，仿佛整个世界和你一起沉入静谧。</string>
    <string name="fragrance2_introduce_des_10">        花香的温柔，因肉荳蔻更添温暖，柠檬将木质的沉稳变的有朝气，少许生姜巧妙地勾出葡萄柚的一丝苦味，同时悸动着雪松温暖而干燥的优雅气息，仿佛大地与树木都被阳光染成了褐色，温柔又优雅。</string>
    <string name="fragrance2_introduce_des_11">        爽朗的柑橘香气自然过渡到绿茶的清新气息，中调红茶的烘烤烟熏感，沉稳富有禅意，茶叶的清香伴着龙涎香营造出高山流水的氛围，回味甘甜，既温暖又迷人。</string>
    <string name="fragrance2_introduce_head_en">HEAD NOTES</string>
    <string name="fragrance2_introduce_head_name">前调</string>
    <string name="fragrance2_introduce_heart_en">HEART NOTES</string>
    <string name="fragrance2_introduce_heart_name">中调</string>
    <string name="fragrance2_title">智能香氛</string>
    <string name="fragrance_co_high">一氧化碳浓度超标，请注意安全。</string>
    <string name="fragrance_density_set_title">浓度调节</string>
    <string name="fragrance_not_install">未安装</string>
    <string name="fragrance_not_install_en">Not Installed</string>
    <string name="fragrance_title">香氛调节</string>
    <string name="fragrance_type_vui">第%s个|%s</string>
    <string name="fragrance_type_vui_null">第%s个</string>
    <string name="fridge2_bind_device">绑定冰箱蓝牙</string>
    <string name="fridge2_door_open_ai_card">智能冰箱门未关，请及时关闭</string>
    <string name="fridge2_door_open_ai_card_button">好的</string>
    <string name="fridge2_maintain_number">020–37520800</string>
    <string name="fridge2_maintain_service">联系客服</string>
    <string name="fridge2_operation_shutdown_time">断电时间</string>
    <string name="fridge2_operation_switch_power">电源开关</string>
    <string name="fridge2_operation_temperature_set">温度设定</string>
    <string name="fridge2_power_vui_label">电源</string>
    <string name="fridge2_temperature_current">目前温度2</string>
    <string name="fridge2_temperature_current_error">--</string>
    <string name="fridge2_title">智能冰箱</string>
    <string name="fridge_btn_ble_close">打开蓝牙</string>
    <string name="fridge_temperature_current">目前温度</string>
    <string name="fridge_temperature_current_error">- -</string>
    <string name="fridge_temperature_set_tip">冰箱温度已设定为 %s</string>
    <string name="fridge_temperature_set_title">温度设定：</string>
    <string name="fridge_temperature_unit">℃</string>
    <string name="fridge_title">冰箱设置</string>
    <string name="fridge_unbundling_dialog_button_ok">解绑</string>
    <string name="fridge_unbundling_dialog_msg">解绑后，冰箱将无法调节，需重新绑定，请慎重操作</string>
    <string name="fridge_unbundling_dialog_title">是否解除冰箱绑定</string>
    <string name="fridge_warning_disconnect">冰箱连接中...</string>
    <string name="fridge_warning_e1">冰箱供电电压异常</string>
    <string name="fridge_warning_e2">冰箱内部风扇电流异常</string>
    <string name="fridge_warning_e3">冰箱压缩机电机启动异常</string>
    <string name="fridge_warning_e4">冰箱压缩机电机转速过低</string>
    <string name="fridge_warning_e5">冰箱控制板过热异常</string>
    <string name="fridge_warning_e6">冰箱温度传感器故障</string>
    <string name="fridge_warning_e7">冰箱门未关，请尽快关闭</string>
    <string name="log_already_upload">日志已经上传</string>
    <string name="sample_title">sample</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="vui_label_activity_back">返回</string>
    <string name="vui_label_cancel">取消</string>
    <string name="vui_label_close_activity">关闭</string>
    <string name="vui_label_close_dialog">关闭</string>
    <string name="vui_label_confirm">确认</string>
    <string name="vui_label_dialog">对话框|弹窗</string>
    <string name="vui_label_display_password">显示</string>
    <string name="vui_label_hide_password">隐藏</string>
    <string name="vui_label_input">输入</string>
    <string name="vui_label_reset">重设|清空|重置</string>
    <string name="vui_label_search">搜索</string>
    <string name="watch_title">儿童手表</string>
    <string name="x_capital_off">close</string>
    <string name="x_capital_on">open</string>
    <string name="x_countdown_tips">%s (%ss)</string>
    <string name="x_date_picker_day">%d</string>
    <string name="x_date_picker_year">%d</string>
    <string name="x_font_typeface_bold">xpeng-fonts-bold</string>
    <string name="x_font_typeface_medium">xpeng-fonts-medium</string>
    <string name="x_font_typeface_number">xpeng-fonts-number</string>
    <string name="x_font_typeface_number_bold">xpeng-fonts-number-bold</string>
    <string name="x_font_typeface_regular">xpeng-fonts-regular</string>
    <string name="x_loading_dialog_message">loading...</string>
    <string name="x_number_indicator_desc_format">%1$s/%2$s</string>
    <string name="x_time_picker_hour">%02d</string>
    <string name="x_time_picker_minute">%02d</string>
</resources>
