<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/content" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/figure" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Fragrance2.Introduce.Figure"/>
    <com.xiaopeng.xui.widget.XTextView android:layout_marginTop="25dp" android:text="@string/fragrance2_introduce_head_name" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/figure" style="@style/Fragrance2.Introduce.SubTitle"/>
    <com.xiaopeng.xui.widget.XTextView android:layout_marginTop="78dp" android:text="@string/fragrance2_introduce_head_en" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/figure" style="@style/Fragrance2.Introduce.SubTitleTip"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/fragrance_head_des" android:layout_marginTop="128dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/figure" style="@style/Fragrance2.Introduce.Tip"/>
    <com.xiaopeng.xui.widget.XTextView android:layout_marginTop="220dp" android:text="@string/fragrance2_introduce_heart_name" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/figure" style="@style/Fragrance2.Introduce.SubTitle"/>
    <com.xiaopeng.xui.widget.XTextView android:layout_marginTop="275dp" android:text="@string/fragrance2_introduce_heart_en" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/figure" style="@style/Fragrance2.Introduce.SubTitleTip"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/fragrance_heart_des" android:layout_marginTop="321dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/figure" style="@style/Fragrance2.Introduce.Tip"/>
    <com.xiaopeng.xui.widget.XTextView android:layout_marginTop="415dp" android:text="@string/fragrance2_introduce_base_name" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/figure" style="@style/Fragrance2.Introduce.SubTitle"/>
    <com.xiaopeng.xui.widget.XTextView android:layout_marginTop="468dp" android:text="@string/fragrance2_introduce_base_en" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/figure" style="@style/Fragrance2.Introduce.SubTitleTip"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/fragrance_base_des" android:layout_marginTop="514dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/figure" style="@style/Fragrance2.Introduce.Tip"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/fragrance_introduce_des" android:layout_marginTop="610dp" android:text="@string/fragrance2_introduce_des_01" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/figure" style="@style/Fragrance2.Introduce.Des"/>
</com.xiaopeng.xui.widget.XConstraintLayout>
