<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/content">
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/fridge_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/fridge2_bg" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" app:vuiMode="DISABLED"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/fridge_webp_bg" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" app:vuiMode="DISABLED"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_display_01_size" android:textColor="@color/fridge_temp_title_color" android:id="@+id/temperature_current" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="546dp" android:maxLength="3" android:fontFamily="@string/x_font_typeface_number_bold" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" app:vuiMode="DISABLED"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_04_size" android:textColor="@color/fridge_temp_title_color" android:id="@+id/temperature_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/fridge_temperature_unit" android:layout_marginStart="6dp" app:layout_constraintLeft_toRightOf="@+id/temperature_current" app:layout_constraintTop_toTopOf="@+id/temperature_current" app:vuiMode="DISABLED"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_03_size" android:textColor="@color/fridge_temp_title_color" android:id="@+id/tv_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/fridge_temperature_current" app:layout_constraintLeft_toLeftOf="@+id/temperature_current" app:layout_constraintRight_toRightOf="@+id/temperature_current" app:layout_constraintTop_toBottomOf="@+id/temperature_current" app:vuiMode="DISABLED"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_bluetooth_close" android:visibility="invisible" android:layout_marginTop="24dp" android:text="@string/fridge_btn_ble_close" app:layout_constraintLeft_toLeftOf="@+id/tv_indicator" app:layout_constraintRight_toRightOf="@+id/tv_indicator" app:layout_constraintTop_toBottomOf="@+id/tv_indicator" app:vuiMode="NORMAL" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_maintain_service" android:visibility="invisible" android:layout_marginTop="24dp" android:text="@string/fridge2_maintain_service" app:layout_constraintLeft_toLeftOf="@+id/tv_indicator" app:layout_constraintRight_toRightOf="@+id/tv_indicator" app:layout_constraintTop_toBottomOf="@+id/tv_indicator" app:vuiMode="NORMAL" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_bluetooth_bind" android:visibility="invisible" android:layout_marginTop="24dp" android:text="@string/fridge2_bind_device" app:layout_constraintLeft_toLeftOf="@+id/tv_indicator" app:layout_constraintRight_toRightOf="@+id/tv_indicator" app:layout_constraintTop_toBottomOf="@+id/tv_indicator" app:vuiMode="NORMAL" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xui.widget.XLoading android:id="@+id/waring_ble_loading" android:visibility="invisible" android:layout_marginTop="10dp" app:layout_constraintLeft_toLeftOf="@+id/tv_indicator" app:layout_constraintRight_toRightOf="@+id/tv_indicator" app:layout_constraintTop_toBottomOf="@+id/tv_indicator" style="@style/XLoading.Large"/>
    <com.xiaopeng.xui.widget.XScrollView android:scrollbarStyle="outsideOverlay" android:id="@+id/warning_scrollView" android:visibility="invisible" android:layout_width="450dp" android:layout_height="0dp" android:layout_marginTop="45dp" android:layout_marginBottom="30dp" android:paddingStart="48dp" android:paddingEnd="28dp" app:layout_constrainedHeight="true" app:layout_constraintBottom_toTopOf="@+id/fridge_operation_panel" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/btn_maintain_service" app:vuiMode="DISABLED">
        <LinearLayout android:orientation="vertical" android:id="@+id/warning_lay" android:paddingTop="5dp" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </com.xiaopeng.xui.widget.XScrollView>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/fridge_operation_panel" android:background="@drawable/fridge2_operation_bg" android:layout_width="860dp" android:layout_height="400dp" android:layout_marginBottom="89dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/switch_power_title" android:text="@string/fridge2_operation_switch_power" android:layout_marginStart="50dp" app:layout_constraintLeft_toLeftOf="@+id/fridge_operation_panel" app:layout_constraintTop_toTopOf="@+id/fridge_operation_panel" app:vuiMode="DISABLED" style="@style/Fridge.Operation.Title"/>
    <com.xiaopeng.xui.widget.XSwitch android:id="@+id/fridge_power_switch" android:layout_width="wrap_content" android:layout_height="132dp" android:paddingStart="45dp" android:paddingEnd="45dp" app:layout_constraintBottom_toBottomOf="@+id/switch_power_title" app:layout_constraintRight_toRightOf="@+id/fridge_operation_panel" app:layout_constraintTop_toTopOf="@+id/switch_power_title" app:vuiLabel="@string/fridge2_power_vui_label"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/shutdown_time_title" android:text="@string/fridge2_operation_shutdown_time" android:layout_marginStart="50dp" app:layout_constraintLeft_toLeftOf="@+id/fridge_operation_panel" app:layout_constraintTop_toBottomOf="@+id/switch_power_title" app:vuiMode="DISABLED" style="@style/Fridge.Operation.Title"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_04_size" android:textColor="@color/text_color" android:gravity="center" android:id="@+id/shutdown_time" android:layout_width="wrap_content" android:layout_height="132dp" android:minWidth="100dp" android:drawablePadding="16dp" android:drawableEnd="@drawable/ic_small_next" android:paddingStart="45dp" android:paddingEnd="45dp" app:layout_constraintBottom_toBottomOf="@+id/shutdown_time_title" app:layout_constraintRight_toRightOf="@+id/fridge_operation_panel" app:layout_constraintTop_toTopOf="@+id/shutdown_time_title" app:vuiElementType="BUTTON" app:vuiLabel="@string/fridge2_operation_shutdown_time"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/temperature_set_title" android:text="@string/fridge2_operation_temperature_set" android:layout_marginStart="50dp" app:layout_constraintLeft_toLeftOf="@+id/fridge_operation_panel" app:layout_constraintTop_toBottomOf="@+id/shutdown_time_title" app:vuiMode="DISABLED" style="@style/Fridge.Operation.Title"/>
    <com.xiaopeng.xui.widget.XSegmented android:id="@+id/segmented" android:layout_width="540dp" android:layout_marginEnd="50dp" app:layout_constraintBottom_toBottomOf="@+id/temperature_set_title" app:layout_constraintRight_toRightOf="@+id/fridge_operation_panel" app:layout_constraintTop_toTopOf="@+id/temperature_set_title" app:segment_texts="@array/fridge_temperature_set" app:segment_vui_labels="@array/fridge_temperature_set_vui" app:vuiMode="NORMAL" style="@style/XSegmented.Rect.Text"/>
</merge>
