<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/content" style="@style/Fridge.Detail">
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/subtitle" android:layout_marginTop="0dp" android:text="@string/fridge_temperature_current" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Fridge.Detail.Text.Title"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/temperature_current_error" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toBottomOf="@+id/subtitle" style="@style/Fridge.Detail.Text.Number.Error"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/temperature_unit_error" app:layout_constraintLeft_toRightOf="@+id/temperature_current_error" app:layout_constraintTop_toBottomOf="@+id/subtitle" style="@style/Fridge.Detail.Text.Unit.Error"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/temperature_current" android:visibility="invisible" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toBottomOf="@+id/subtitle" style="@style/Fridge.Detail.Text.Number"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/temperature_unit" android:visibility="invisible" app:layout_constraintLeft_toRightOf="@+id/temperature_current" app:layout_constraintTop_toBottomOf="@+id/subtitle" style="@style/Fridge.Detail.Text.Unit"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_bluetooth_close" android:visibility="invisible" android:layout_marginTop="184dp" android:text="@string/fridge_btn_ble_close" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toBottomOf="@+id/subtitle" app:vuiMode="NORMAL" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/waring_line" android:layout_marginTop="190dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/subtitle" style="@style/Fridge.Detail.Line"/>
    <com.xiaopeng.xui.widget.XLoading android:id="@+id/waring_ble_loading" android:visibility="invisible" android:layout_marginTop="30dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toBottomOf="@+id/waring_line" style="@style/XLoading.Small"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/waring_ble_disconnect" android:visibility="invisible" android:layout_marginTop="30dp" android:text="@string/fridge_warning_disconnect" android:layout_marginStart="6dp" app:layout_constraintLeft_toRightOf="@+id/waring_ble_loading" app:layout_constraintTop_toBottomOf="@+id/waring_line" style="@style/Fridge.Detail.Tip.Loading"/>
    <com.xiaopeng.xui.widget.XScrollView android:id="@+id/warning_scrollView" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginBottom="12dp" app:layout_constrainedHeight="true" app:layout_constraintBottom_toTopOf="@+id/waring_line2" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/waring_line" app:vuiMode="DISABLED">
        <LinearLayout android:orientation="vertical" android:id="@+id/warning_lay" android:paddingTop="30dp" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </com.xiaopeng.xui.widget.XScrollView>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/waring_line2" android:layout_marginBottom="30dp" app:layout_constraintBottom_toTopOf="@+id/segmented_title" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" style="@style/Fridge.Detail.Line"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/segmented_title" android:layout_marginTop="485dp" android:layout_marginBottom="104dp" android:text="@string/fridge_temperature_set_title" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toBottomOf="@+id/subtitle" style="@style/Fridge.Detail.Text.Title"/>
    <com.xiaopeng.xui.widget.XSegmented android:id="@+id/segmented" android:layout_marginTop="15dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/segmented_title" app:segment_texts="@array/fridge_temperature_set" app:segment_vui_labels="@array/fridge_temperature_set_vui" app:vuiMode="NORMAL" style="@style/Fridge.Detail.XSegmented"/>
</merge>
